Add labels field to values.yaml
The labels field is not explicitly exposed.
This is critical for affinity settings.

--- a/charts/redisoperator/values.yaml
+++ b/charts/redisoperator/values.yaml
@@ -27,6 +27,9 @@ replicas: 1
 # A name in place of the chart name for `app:` labels.
 nameOverride: ""
 
+labels: {}
+  # app: redis
+
 # A name to substitute for the full names of resources.
 fullnameOverride: ""
 
