Adding named master support for sentinel (#3)
* Make mymaster initial changes

* Adding the named master support

* Adding changes where there are references to mymaster

* Update README of this change.

* Missed to update the shutdowd.sh

* Remove if clause and use functions to get the master name

* Adding tests

* Adding integration test

* Adding the disableMyMaster as false in the default test

* Commented one test

* Revert changes

* Missed to add one change

* Adding integration tests

* Changes to ci workflow

--- a/example/redisfailover/disable-mymaster.yaml
+++ b/example/redisfailover/disable-mymaster.yaml
@@ -2,7 +2,7 @@ apiVersion: databases.spotahome.com/v1
 kind: RedisFailover
 metadata:
   name: redisfailover
-  namespace: basic
+  namespace: disable-mymaster
 spec:
   sentinel:
     replicas: 3
@@ -11,6 +11,7 @@ spec:
         cpu: 100m
       limits:
         memory: 100Mi
+    disableMyMaster: true
   redis:
     replicas: 3
     resources:
