--- a/manifests/kustomize/base/databases.spotahome.com_redisfailovers.yaml
+++ b/manifests/kustomize/base/databases.spotahome.com_redisfailovers.yaml
@@ -8797,6 +8797,8 @@ spec:
                         format: int32
                         type: integer
                     type: object
+                  disableMyMaster:
+                    type: boolean
                   disablePodDisruptionBudget:
                     type: boolean
                   dnsPolicy:
