fix templating of `cli_args` values #19

--- a/charts/redisoperator/templates/deployment.yaml
+++ b/charts/redisoperator/templates/deployment.yaml
@@ -42,8 +42,8 @@ spec:
       - name: {{ .Chart.Name }}
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion}}"
         {{- if .Values.image.cli_args }}
-        args: 
-        - {{ quote .Values.image.cli_args }}
+        args:
+          {{- toYaml .Values.image.cli_args | nindent 8 }}
         {{- end }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         ports:
