chore: remove freshworks/core from CODEOWNERS file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* @freshworks/core @samof76 @pratheep-kumar @dinesh-murugiah @Sasidharan-Gopal
+* @samof76 @pratheep-kumar @dinesh-murugiah @Sasidharan-Gopal
