Updating workflow to run only if go files are modified

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ on:
     types: [opened, synchronize, reopened, edited]
     branches:
       - master
+    paths:
+      - '**/*.go'
 jobs:
     check:
         name: Golang Check
