feat: Add masterPodAnnotations and slavePodAnnotations for role-specific Redis pod annotations
This feature allows users to apply different annotations to Redis pods based on their role (master/slave):
- masterPodAnnotations: Applied only to Redis master pods
- slavePodAnnotations: Applied only to Redis slave pods
- podAnnotations: Still applied to all pods (common annotations)

Changes:
- Add new fields to RedisSettings API type (api/redisfailover/v1/types.go)
- Implement annotation generation logic in service layer (operator/redisfailover/service/generator.go)
- Apply annotations dynamically when roles change (operator/redisfailover/service/check.go, heal.go)
- Add UpdatePodAnnotations method to k8s service (service/k8s/pod.go)
- Update CRD schemas in both manifest files
- Add comprehensive unit tests for annotation logic
- Add integration test for annotation functionality
- Create example YAML demonstrating the feature
- Update README.md with feature documentation
- Optimize Makefile to use podman when available over docker

The annotations are applied dynamically when:
- Pods are initially assigned roles (master/slave)
- Master failover occurs and roles switch
- Annotations are added/removed from the RedisFailover spec

This enables use cases like:
- Different monitoring configurations for master vs slave
- Backup annotations only on master pods
- Read-only annotations on slave pods
- Role-specific alerting and priority settings

--- a/manifests/databases.spotahome.com_redisfailovers.yaml
+++ b/manifests/databases.spotahome.com_redisfailovers.yaml
@@ -6828,6 +6828,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  masterPodAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  slavePodAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
                   port:
                     format: int32
                     type: integer
