--- a/manifests/kustomize/base/databases.spotahome.com_redisfailovers.yaml
+++ b/manifests/kustomize/base/databases.spotahome.com_redisfailovers.yaml
@@ -6828,6 +6828,14 @@ spec:
                     additionalProperties:
                       type: string
                     type: object
+                  masterPodAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
+                  slavePodAnnotations:
+                    additionalProperties:
+                      type: string
+                    type: object
                   port:
                     format: int32
                     type: integer
